better fixing webkit overflow and display inline-block

--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ height:60px;
 display:inline-block;
 width:48px;
 height:48px;
-overflow:hidden;
+overflow:visible;
 border:3px solid #000000;
 border-radius:6px;
 text-decoration:none;
@@ -282,9 +282,12 @@ line-height:48px;
 text-transform:uppercase;
 }
 
-#beings > a.editing
+#beings > a > span.beingName
 {
-overflow:visible;
+display:inline-block;
+overflow:hidden;
+max-width:48px;
+max-height:48px;
 }
 
 #showBeing
